--- a/css/style sheet.css
+++ b/css/style sheet.css
@@ -9,7 +9,7 @@ body *{
     text-align: center;
   }
   
-header, footer{
+header{
     color: white;
     background-color:black;
     height:auto;
@@ -18,7 +18,6 @@ header, footer{
 .broccolito{
   font-family: fantasy;
   color: green;
-  font-size: xx-large;
 }
 
 .mail{
@@ -34,25 +33,6 @@ header, footer{
   background: white;
 }
 
-main > .bodyimg{
-    background-image:
-    url("img/pexels-kalistro-1327867553-25785792.jpg");
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    min-height: 50vh;
-    color: white;
-     
-}
-
-@media(max-with: 768px){
-  .bodyimg{
-    min-height: 50vh;
-  }
-  .bodyimg{
-    font-size: calc(1.525rem + 3.3vw);
-  }
-} 
 
 a{
 text-decoration: none;
@@ -63,9 +43,7 @@ color: white;
 h2{
     padding-top: 5%;
 }
-.p0,.p1{ 
-width: 30%;
-padding-left: 35%;
+.p0,.p1, .p2{ 
 color: rgba(241, 207, 207, 0.885);
 }
 
@@ -86,15 +64,12 @@ ul{
 
       .boxes{
         margin-top:2px;
-        width: 20em;
-        height: 4ex;
         background-color: rgb(11, 102, 28);
         border: 2px solid firebrick;
         border-radius: 10px;
         font-weight: bold;
         color: black;
         cursor: pointer;
-        padding-top: 10px; 
       }
 
       .countries{
@@ -126,5 +101,61 @@ ul{
           background: rgb(19, 52, 1);
         }
       }
+
+
+      @media(min-width:180px){
+        h1,h2,h3{
+          font-size: 10px;
+          width: 100%;
+        }
+        .broccolito{
+          font-size: large;
+        }
+
+        .p0,.p1, .p2{
+          font-size: 8px;
+          width: 70%;
+          padding-left: 15%;
+        }
+
+        .boxes{
+           margin-right: 30%;
+           width: 9em;
+           height: 3ex;
+           
+        }
+      }
+
+      @media(min-width:330px){
+        h1,h2,h3{
+          font-size: 12px;
+          width: 100%;
+        }
+        .broccolito{
+          font-size:x-large;
+        }
+
+        .p0,.p1, .p2{
+          font-size: 10px;
+          width: 70%;
+          padding-left: 15%;
+        }
+
+        .boxes{
+           margin-right: 10%;
+           width: 15em;
+           height: 4ex;
+           padding-top: 10px;
+      }
+    }
+
+    @media(min-width:436px){
+      .boxes{
+           margin-right: 5%;
+           width: 15em;
+           height: 4ex;
+           padding-top: 10px;
+      }
+    }
       
       
